externalize message strings